--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,23 +11,55 @@
 #blueBack {
     background-color: rgb(223, 239, 250);
 }
+
+.header .img-responsive {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+}
+
 .myH2 {
     font-family: Helvetica, sans-serif;
     color: grey;
-    letter-spacing: 5px;
+    letter-spacing: 0.5vw;
+    font-size: 3vw;
 }
 
 .header {
-    margin-bottom: 3%;
+    margin-bottom: 5%;
+}
+
+.container-1 .btn {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    font-size: 1.5vw;
+}
+
+.container-1 input {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    font-size: 1.5vw;
+}
+
+.container-1 {
+    margin-bottom: -3vw;
 }
 
 /* Style of List_Of_Items section */
+.form-control {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    font-size: 1vw;
+}
 
 /* Style of Footer section */
 .footEnd {
     border-top: solid 0.5px grey;
     color: #4988B2;
     padding: 1%;
-    font-size: 0.8vw;
+    font-size: 1.2vw;
     text-align: center;
 }
