--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+* {
+    background-color: rgb(223, 239, 250);
+}
+
 .all {
     background-color: rgb(223, 239, 250);
     background-size: 100%;
@@ -56,7 +60,7 @@
 }
 
 /* Style of Footer section */
-.footEnd {
+.footer {
     border-top: solid 0.5px grey;
     color: #4988B2;
     padding: 1%;
